# Econline-Api

./: .env.example  .env.production.example  .env.staging.example  .flake8  .gitignore  .pylintrc  CODIGO_QUALITY_REPORT.md  COUPON_LIMIT_FIX.md  ENVIRONMENTS.md  MONITORING_STRATEGY.md  Makefile  Pipfile  README.md  WEBHOOK_SETUP.md  check_email_config.sh  check_refund_manual.py  config.yml  docker-compose.yml  dump.rdb  get-pip.py  main.py  manage.py  migrate_to_uv.sh  monitor_lite_webhooks.py  monitor_missing_webhooks.py  monitor_webhooks.sh  packages_requirements.txt  packages_uv.txt  packages_uv_updated.txt  pyproject.toml  requirements.txt  schema.yml  setup.cfg  setup_tunnel.sh  test_concurrent_webhooks.sh  test_real_webhooks.sh  test_sequential_webhooks.sh  test_webhooks.sh  uv.toml
cart/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_initial.py  0003_cartitem_coupon.py  0004_rename_count_cartitem_quantity.py  0005_remove_cart_total_items_cart_products.py  0006_cart_total_items.py  0007_alter_cartitem_cart.py  0008_deliverycost.py  0009_deliverycost_name.py  0010_alter_deliverycost_name.py  0011_remove_cart_products.py  0012_alter_cartitem_cart.py  0013_alter_cartitem_inventory.py  0014_alter_cartitem_inventory.py  0015_alter_cartitem_options.py  0016_alter_cartitem_cart.py  0017_cart_coupon.py  0018_remove_cartitem_coupon.py  0019_remove_cart_coupon.py  0020_cart_coupon.py  0021_remove_cart_coupon_cart_coupons.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/management/: __init__.py
categories/migrations/: 0001_initial.py  0002_remove_category_is_parent_category_parent.py  0002_remove_measureunit_is_custom_and_more.py  0003_measureunit_is_custom_alter_measureunit_description.py
cloudflare/: config.yml  credentials.json
common/: models.py
common/migrations/: 0001_initial.py
config/: asgi.py  celery.py  logging.py  logging_config.py  routing.py  settings.py  urls.py
config/settings/: __init__.py  base.py  development.py  production.py  staging.py
coupons/: admin.py  fields.py  models.py  serializers.py  urls.py  views.py
coupons/migrations/: 0001_initial.py  0002_remove_coupon_content_type.py  0003_campaign.py  0004_remove_coupon_inventory_remove_coupon_user_and_more.py  0005_populate_coupon_codes.py  0006_alter_coupon_code_alter_coupon_end_date.py  0007_alter_coupon_end_date.py  0007_alter_coupon_name.py  0008_alter_coupon_code_alter_coupon_end_date.py  0009_alter_coupon_end_date.py  0010_alter_coupon_end_date.py  0011_alter_coupon_end_date.py  (+8 more)
enquiries/: admin.py  views.py
helpers/: __init__.py
inventory/: admin.py  exceptions.py  models.py  pagination.py  serializers.py  urls.py  views.py
migrations/: 0001_initial.py
orders/: admin.py  models.py  rem-permissions.py  rem-serializers.py  serializers.py  urls.py  views.py
payments/: API_DOCUMENTATION.md  README_CANCELLATIONS.md  admin.py  apps.py  consumers.py  flujo_optimizado.md  models.py  permissions.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views (copia).py  views-copy.py  views.py  webhooks.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
profiles/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
promotion/: admin.py  models.py  tasks.py
ratings/: admin.py  models.py  serializers.py  urls.py  views.py
reviews/: admin.py  models.py  serializers.py  urls.py  views.py
scripts/: set-environment.sh
shipping/: SHIPPING_FLOW.md  admin.py  models.py  serializers.py  services.py  urls.py  views.py
static_assets/: README.md
tests/: factories.py
users/: admin.py  authentication.py  countries.py  forms.py  managers.py  middleware.py  models.py  rem-throttling.py  rem-utils.py  rem-views.py  serializers.py  throttling.py  urls.py  utils.py  views.py
(+173 files in other folders)
